[package]
name = "cellopt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CellOpt<T> allows Cell-like behaviour for those T that do not implement Default or Copy."
repository = "https://github.com/bzm3r/cellopt/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
